2022-11-09T02:05:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3424748232 # 598
* notice: last 14d: unq all: 8 12
* notice: prev accum: outdated-unq outdated-all / unq all: 148 609 / 157 623
* notice: next accum: outdated-unq outdated-all / unq all: 149 611 / 157 623
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-25] / []

2022-11-08T08:30:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3417657810 # 596
* notice: last 14d: unq all: 8 14
* notice: prev accum: outdated-unq outdated-all / unq all: 148 609 / 155 620
* notice: next accum: outdated-unq outdated-all / unq all: 148 609 / 157 623
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2022-11-08]

2022-11-07T16:29:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3412172178 # 594
* notice: last 14d: unq all: 6 11
* notice: prev accum: outdated-unq outdated-all / unq all: 146 604 / 154 616
* notice: next accum: outdated-unq outdated-all / unq all: 148 609 / 155 620
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-24] / []

2022-11-07T08:29:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3408708040 # 593
* notice: last 14d: unq all: 7 12
* notice: prev accum: outdated-unq outdated-all / unq all: 146 604 / 155 620
* notice: next accum: outdated-unq outdated-all / unq all: 146 604 / 154 616
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -4 / +2 +5 -1 -4 / 1 1
* notice: removed / changed dates: [] / [2022-10-24]

2022-11-06T16:28:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3405117788 # 591