@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-27T02:04:11Z",
-  "count" : 2,
+  "timestamp" : "2022-11-09T16:30:38Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
-  "uniques" : 2,
+  "count_decinc" : [ -1, +2 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
