@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-11-09T02:05:28Z",
+  "timestamp" : "2022-11-09T16:30:38Z",
   "count_outdated" : 611,
   "uniques_outdated" : 149,
-  "count" : 623,
-  "uniques" : 157,
+  "count" : 622,
+  "uniques" : 156,
   "views" : [
     {
       "timestamp": "2022-10-26T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
