@@ -1,11 +1,11 @@
 {
-  "count": 12,
-  "uniques": 8,
+  "count": 11,
+  "uniques": 7,
   "views": [
     {
       "timestamp": "2022-10-26T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-10-28T00:00:00Z",
