@@ -1,3 +1,11 @@
+2022-11-09T16:30:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3429972778 # 600
+* notice: last 14d: unq all: 7 11
+* notice: prev accum: outdated-unq outdated-all / unq all: 149 611 / 157 623
+* notice: next accum: outdated-unq outdated-all / unq all: 149 611 / 156 622
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +2 -1 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-10-26]
+
 2022-11-09T02:05:28Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3424748232 # 598
 * notice: last 14d: unq all: 8 12
